--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-  <style>
-    #canvas {
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        background-color: black;
-    }
-  </style>
 <body>
+  <canvas id="canvas"></canvas>
   <button id="player">Play</button>
   <div>
     <label>Oscillator 1</label>
@@ -34,6 +27,7 @@
   <script src="effects.js" type="text/javascript"></script>
   <script src="gain.js" type="text/javascript"></script>
   <script src="oscillator.js" type="text/javascript"></script>
+  <script src="oscilloscope.js" type="text/javascript"></script>
   <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
