update oscillator flow

--- a/index.html
+++ b/index.html
@@ -8,20 +8,8 @@
   <canvas id="canvas"></canvas>
   <button id="player">Play</button>
   <div>
-    <label>Oscillator 1</label>
-    <input type="checkbox" id="osc1"></input>
-  </div>
-  <div>
-    <label>Oscillator 2</label>
-    <input type="checkbox" id="osc2"></input>
-  </div>
-  <div>
-    <label>Oscillator 3</label>
-    <input type="checkbox" id="osc3"></input>
-  </div>
-  <div>
-    <label>Oscillator 4</label>
-    <input type="checkbox" id="osc4"></input>
+    <label>Oscillator</label>
+    <input type="checkbox" id="oscillator"></input>
   </div>
   <script src="state.js" type="text/javascript"></script>
   <script src="effects.js" type="text/javascript"></script>
