--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  <canvas id="canvas"></canvas>
+<body id="app">
   <button id="player">Play</button>
-  <div>
-    <label>Oscillator</label>
-    <input type="checkbox" id="oscillator"></input>
-  </div>
+  <button id="add-oscillator">Add Oscillator</button>
+  <div id="oscillators"></div>
   <script src="state.js" type="text/javascript"></script>
   <script src="effects.js" type="text/javascript"></script>
   <script src="gain.js" type="text/javascript"></script>
