--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <button id="add-oscillator">Add Oscillator</button>
   <div id="oscillators"></div>
   <script src="state.js" type="text/javascript"></script>
-  <script src="effects.js" type="text/javascript"></script>
+  <script src="store.js" type="text/javascript"></script>
   <script src="gain.js" type="text/javascript"></script>
   <script src="oscillator.js" type="text/javascript"></script>
   <script src="oscilloscope.js" type="text/javascript"></script>
