--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body id="app">
-  <button id="player">Play</button>
-  <button id="add-oscillator">Add Oscillator</button>
-  <div id="oscillators"></div>
+<body>
+  <div id="app"></div>
+  <script src="components.js" type="text/javascript"></script>
+  <script src="reducer.js" type="text/javascript"></script>
+  <script src="actions.js" type="text/javascript"></script>
   <script src="state.js" type="text/javascript"></script>
   <script src="store.js" type="text/javascript"></script>
-  <script src="gain.js" type="text/javascript"></script>
-  <script src="oscillator.js" type="text/javascript"></script>
+  <script src="audio.js" type="text/javascript"></script>
   <script src="oscilloscope.js" type="text/javascript"></script>
   <script src="index.js" type="text/javascript"></script>
 </body>
