--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    svg {
+      background-color: black;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
+  <script src="oscilloscope.js" type="text/javascript"></script>
+  <script src="envelope.js" type="text/javascript"></script>
   <script src="components.js" type="text/javascript"></script>
   <script src="reducer.js" type="text/javascript"></script>
   <script src="actions.js" type="text/javascript"></script>
   <script src="state.js" type="text/javascript"></script>
   <script src="store.js" type="text/javascript"></script>
   <script src="audio.js" type="text/javascript"></script>
-  <script src="oscilloscope.js" type="text/javascript"></script>
   <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
